# black-hole-simulation-lab

./: .clang-format  .gitattributes  .gitignore  AUDIT-250-POINT-GOLD-STANDARD.md  AUTHORS  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  index.html  requirements-dev.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
data/: schema.sql
docs/: GLOSSARY.md  INDEX.md  INSPIRATION_BRIEFING.md
docs/architecture/: ARCHITECTURE.md  ERD.md  ERM.md  HIERARCHY.md  SYSTEM_DIAGRAM.md
docs/architecture/diagrams/: erd.mmd  module_dependency.mmd  system_pipeline.mmd
docs/audits/: AUDIT-2026-06-12-FULL-REPO-REVIEW.md  AUDIT-2026-06-13-RELOCATION-AND-TIER1-REVIEW.md  INITIAL_250_POINT_GOLD_STANDARD_AUDIT.md  INSPECTION-500-POINT.md
docs/engineering/: COMPLEXITY.md
docs/images/: README.md
docs/integrations/: ESHKOL_INTEGRATION.md  TSOTCHKE_ECOSYSTEM.md
docs/log/: DAILY_LOG.md  DECISIONS.md
docs/operations/: DIRECT_LOCAL_GITHUB_WORKFLOW.md  ENGINEERING_RESOURCE_PLAN.md
docs/planning/: DEVELOPMENT_GAMEPLAN.md  ROADMAP.md
docs/process/: DAILY_WORKFLOW.md  KANBAN.md  REPO_WORKFLOW.md
docs/reports/: PROJECT_LOG.md
docs/research/: M5_SHADOW_ASYMMETRY.md  RESEARCH_PROGRAM.md
docs/research/source_cards/: 1827-gauss-theorema-egregium.md  1916-schwarzschild-solution.md  1952-choquet-bruhat-cauchy.md  1962-newman-penrose-formalism.md  1963-kerr-rotating-mass.md  1965-penrose-singularity-theorem.md  1969-penrose-process.md  1972-bardeen-press-teukolsky-rotating-bh.md  1973-bardeen-carter-hawking-four-laws.md  1973-bekenstein-entropy.md  1973-misner-thorne-wheeler-gravitation.md  1974-hawking-radiation.md  1979-schoen-yau-positive-mass-theorem.md  1983-chandrasekhar-mathematical-theory-of-black-holes.md  1996-strominger-vafa-microstates.md  2008-ghez-sgra-mass.md  2016-ligo-gw150914.md  2019-eht-m87-shadow.md  2022-eht-sgra-shadow.md  2025-gwtc4-gwosc.md  INDEX.md
docs/source/: GOLD_STANDARD_AUDIT_SOP.txt  GROK_IS_TERRY_DAVIS.xml  MAXIMUM_SEEKING_MINDSET_v2.5.md
docs/testing/: TEST_STRATEGY.md
docs/vision/: MISSION.md  SCIENTIFIC_INTEGRITY_CHARTER.md  VISION.md
include/blackhole_ds/: units.hpp
include/blackhole_ds/cli/: options.hpp
include/blackhole_ds/core/: constants.hpp  truth_label.hpp
include/blackhole_ds/data/: csv_writer.hpp
include/blackhole_ds/geodesics/: kerr_geodesic.hpp  kerr_shadow.hpp  schwarzschild_photon.hpp
include/blackhole_ds/integrators/: ode_state.hpp  rk4.hpp  rk45.hpp
include/blackhole_ds/metrics/: kerr.hpp  schwarzschild.hpp
include/blackhole_ds/qnm/: kerr_fit.hpp  leaver.hpp  spectroscopy.hpp  wkb.hpp
include/blackhole_ds/thermo/: hawking.hpp
include/blackhole_ds/viz/: ascii_shadow.hpp  disk_image.hpp  kerr_disk_image.hpp  kerr_shadow_image.hpp  ppm_writer.hpp  shadow_image.hpp
knowledge/brains/: INDEX.md  MANIFEST.json  seed_profiles.json
knowledge/brains/astronomers/: andrea-ghez.xml  arthur-eddington.xml  reinhard-genzel.xml  shep-doeleman.xml  subrahmanyan-chandrasekhar.xml
knowledge/brains/mathematicians/: bernhard-riemann.xml  carl-friedrich-gauss.xml  elie-cartan.xml  henri-poincare.xml  shing-tung-yau.xml  yvonne-choquet-bruhat.xml
knowledge/brains/physicists/: albert-einstein.xml  andrew-strominger.xml  ezra-newman.xml  jacob-bekenstein.xml  karl-schwarzschild.xml  kip-thorne.xml  roger-penrose.xml  roy-kerr.xml  stephen-hawking.xml
knowledge/papers/: INDEX.jsonl  seed_sources.json
knowledge/papers/feed/: 2026-06-14.md  2026-06-26.md  2026-06-29.md  2026-06-30.md  2026-07-01.md  2026-07-03.md  2026-07-06.md  2026-07-07.md  2026-07-08.md  2026-07-09.md  2026-07-10.md  2026-07-11.md  2026-07-13.md  2026-07-14.md  2026-07-15.md  README.md
schemas/: brain_soul.xsd  source_card.json
scripts/: Validate-ResearchOS.py
scripts/brains/: build_brains.py  validate_brains.py
scripts/dev/: Daily-Commit.ps1  Install-PreCommitHook.ps1  audit.ps1  build.ps1  clean.ps1  format.ps1  test.ps1
scripts/local/: Sync-OppengrokLocalRepo.ps1
scripts/research/: build_source_cards.py  kerr_shadow_asymmetry.py  validate_source_cards.py
src/: BlackHoleDS.cpp
src/cli/: main.cpp
tests/: cli_tests.cpp  disk_tests.cpp  geodesic_tests.cpp  integrator_tests.cpp  kerr_disk_tests.cpp  kerr_geodesic_tests.cpp  kerr_metric_cross_check_tests.cpp  kerr_shadow_tests.cpp  qnm_tests.cpp  render_tests.cpp  shadow_tests.cpp  smoke_tests.cpp  thermo_tests.cpp
tools/: blackhole_ds_harness.py
